tests/toylang/neg/001398_mutation.toylang
program a = { var a : bool sleep; } .
